# Ditto

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
src/: analyzer.py  config.py  cropper.py  edit.py  editor.py  generate.py  layouts.py  llm_utils.py  metadata_parser.py  models.py  renderer.py
tests/: test_edit.py  test_generate.py  test_unit.py
